Fixing centered text on Safari

--- a/Styles.css
+++ b/Styles.css
@@ -13,6 +13,7 @@ html {
 
 .everything {
   background-color:#ff9966; 
+  text-align: center;
   
 }
 
@@ -127,6 +128,6 @@ p {
 
 div.footer{
   padding: 5px;
-  text-align-last: center;
+  text-align: center;
 }
 /*End footer*/
